@@ -65,22 +65,21 @@ public class DRDao extends AbstractBaseDao {
 
 	@Autowired
 	EventRepository eventrepo;
-	
-	@Autowired
-    AllUserRepository alluserrepo;
-	
-	@Autowired
-    EventCustomerRepository eventcustomerrepo;
 
+	@Autowired
+	AllUserRepository alluserrepo;
 
-	public HashMap<String,Object> createEventSet(String filePath, byte[] imageByte, String location, int userId) {
-		
-		HashMap<String,Object> response= new HashMap<String, Object>();
-		HashMap<String,Object> internalresponse= new HashMap<String, Object>();
+	@Autowired
+	EventCustomerRepository eventcustomerrepo;
+
+	public HashMap<String, Object> createEventSet(String filePath, byte[] imageByte, String location, int userId) {
+
+		HashMap<String, Object> response = new HashMap<String, Object>();
+		HashMap<String, Object> internalresponse = new HashMap<String, Object>();
 		try {
 			ArrayList<Object> eventSetObjects = createEventSet(location, userId);
-			AllEventSetDto allEventSets= (AllEventSetDto)eventSetObjects.get(0);
-			//allEventSets.set
+			AllEventSetDto allEventSets = (AllEventSetDto) eventSetObjects.get(0);
+			// allEventSets.set
 			// internalresponse.put("eventSet", eventSetObjects.get(0));
 			List<AllEventDto> listOfEvents = createFile(filePath, imageByte, eventSetObjects.get(1));
 			allEventSets.setAllEvents(listOfEvents);
@@ -91,10 +90,11 @@ public class DRDao extends AbstractBaseDao {
 			allEventSets.setCancelledEvents("0");
 			allEventSets.setCompletedEvents("0");
 			allEventSets.setPublishedEvents("0");
-			eventsetrepo.updateEventSet(Double.parseDouble(powerAndPrice.get(0)), Double.parseDouble(powerAndPrice.get(1)), allEventSets.getEventSetId());
-			//internalresponse.put("events", listOfEvents);
-			 internalresponse.put("eventSet", allEventSets);
-			 
+			eventsetrepo.updateEventSet(Double.parseDouble(powerAndPrice.get(0)),
+					Double.parseDouble(powerAndPrice.get(1)), allEventSets.getEventSetId());
+			// internalresponse.put("events", listOfEvents);
+			internalresponse.put("eventSet", allEventSets);
+
 			response.put("responseStatus", "1");
 			response.put("responseMessage", "The request was successfully served.");
 			response.put("response", internalresponse);
@@ -119,7 +119,7 @@ public class DRDao extends AbstractBaseDao {
 		AllEventSetDto alleventsetdto = new AllEventSetDto();
 		ArrayList<Object> listOfObjects = new ArrayList<Object>();
 		try {
-			int count = eventsetrepo.getEventSetCount()+1;
+			int count = eventsetrepo.getEventSetCount() + 1;
 			Date d = new Date();
 			int year = d.getYear();
 			int month = d.getMonth();
@@ -127,7 +127,7 @@ public class DRDao extends AbstractBaseDao {
 			Timestamp ts = new Timestamp(System.currentTimeMillis());
 			AllUser alluser = eventsetrepo.getUserById(userId);
 			AllEventSet alleventset = new AllEventSet();
-			
+
 			EventSetStatusPl eventsetstatuspl = eventsetrepo.getEventSetStatus("Created");
 			alleventset.setName(location + year + month + date);
 			alleventset.setAllUser(alluser);
@@ -162,29 +162,32 @@ public class DRDao extends AbstractBaseDao {
 		List<EventCustomerDto> listOfEventCustDto = new ArrayList<EventCustomerDto>();
 		try {
 			int count = eventcustomerrepo.getEventCustomerCount();
-			List<UserAccessLevelMapping> listOfusers = eventcustomerrepo.getUserAccessLevel(event.getAllEventSet().getAllUser().getUserId());
-			//	EventCustomerStatusPl eventstatus = eventcustomerrepo.getEventCustomerStatus(1);
-				for (int j=0;j<listOfusers.size();j++) {
-					count++;
-					EventCustomerDto eventCustomerDto = new EventCustomerDto();
-					EventCustomerMapping eventCustomerMapping = new EventCustomerMapping();
-					eventCustomerMapping.setAllUser(listOfusers.get(j).getAllUser());
-					eventCustomerMapping.setEventCustomerMappingId(count);
-					eventCustomerMapping.setAllEvent(event);
-					eventCustomerMapping.setCounterBidAmount(0);
-					eventCustomerMapping.setCommitedPower(0);
-					eventCustomerMapping.setActualPower(0);
-					eventCustomerMapping.setCounterBidFlag("N");
-					eventCustomerMapping.setBidPrice(event.getExpectedPrice());
-					eventCustomerDto.setUserId(listOfusers.get(j).getAllUser().getUserId());
-					eventCustomerDto.setUserName(listOfusers.get(j).getAllUser().getFullName());
-					eventCustomerDto.setEventId(event.getEventId());
-					eventCustomerDto.setIsSelected("Y");
-					eventCustomerMapping.setEventCustomerStatusId(1);
-					// eventCustomerDto.setActualPower(allevent.getActualPower());
-					eventCustomerDto.setParticipationStatus("1");
-					listOfEventCustDto.add(eventCustomerDto);
-					listOfEventCustMapping.add(eventCustomerMapping);
+			List<UserAccessLevelMapping> listOfusers = eventcustomerrepo
+					.getUserAccessLevel(event.getAllEventSet().getAllUser().getUserId());
+			// EventCustomerStatusPl eventstatus =
+			// eventcustomerrepo.getEventCustomerStatus(1);
+			for (int j = 0; j < listOfusers.size(); j++) {
+				count++;
+				EventCustomerDto eventCustomerDto = new EventCustomerDto();
+				EventCustomerMapping eventCustomerMapping = new EventCustomerMapping();
+				eventCustomerMapping.setAllUser(listOfusers.get(j).getAllUser());
+				eventCustomerMapping.setEventCustomerMappingId(count);
+				eventCustomerMapping.setAllEvent(event);
+				eventCustomerMapping.setCounterBidAmount(0);
+				eventCustomerMapping.setCommitedPower(0);
+				eventCustomerMapping.setActualPower(0);
+				eventCustomerMapping.setCounterBidFlag("N");
+				eventCustomerMapping.setBidPrice(event.getExpectedPrice());
+				eventCustomerDto.setUserId(listOfusers.get(j).getAllUser().getUserId());
+				eventCustomerDto.setUserName(listOfusers.get(j).getAllUser().getFullName());
+				eventCustomerDto.setEventId(event.getEventId());
+				eventCustomerDto.setIsSelected("Y");
+				eventCustomerMapping.setCustomerFine(0);
+				eventCustomerMapping.setEventCustomerStatusId(1);
+				// eventCustomerDto.setActualPower(allevent.getActualPower());
+				eventCustomerDto.setParticipationStatus("1");
+				listOfEventCustDto.add(eventCustomerDto);
+				listOfEventCustMapping.add(eventCustomerMapping);
 			}
 			eventcustomerrepo.saveAll(listOfEventCustMapping);
 			// return alleventset1;
@@ -204,7 +207,7 @@ public class DRDao extends AbstractBaseDao {
 		try {
 			new FileOutputStream(filePath).write(imageByte);
 			file = new FileInputStream(new File(filePath));
-			listOfEvents=createEventSetObjects(file, eventSet);
+			listOfEvents = createEventSetObjects(file, eventSet);
 		} catch (Exception e) {
 			e.printStackTrace();
 		} finally {
@@ -222,15 +225,15 @@ public class DRDao extends AbstractBaseDao {
 			CommonUtility cm = new CommonUtility();
 			// Get first/desired sheet from the workbook
 			XSSFSheet sheet = workbook.getSheetAt(0);
-			AllEventSet alleventset =(AllEventSet)alleventset1;
+			AllEventSet alleventset = (AllEventSet) alleventset1;
 			// Iterate through each rows one by one
 			Iterator<Row> rowIterator = sheet.iterator();
 			Row firstrow = rowIterator.next();
 			int count = 0;
 			int rowCount = eventrepo.getEventCount();
 			ArrayList<Date> listOfDates = new ArrayList<Date>();
-			EventStatusPl eventstatuspl= eventrepo.getEventStatus("Created");
-			//List<AllEvent> listOfEvents = new ArrayList<AllEvent>();
+			EventStatusPl eventstatuspl = eventrepo.getEventStatus("Created");
+			// List<AllEvent> listOfEvents = new ArrayList<AllEvent>();
 			while (rowIterator.hasNext()) {
 				count++;
 				rowCount++;
@@ -253,12 +256,13 @@ public class DRDao extends AbstractBaseDao {
 				alleventsetdto.setEventName(alleventset.getName() + count);
 				alleventsetdto.setEventSetId(alleventset.getEventSetId());
 				alleventsetdto.setEventStatus(eventstatuspl.getName());
-				
+
 				allevent.setEventId(rowCount);
 				allevent.setEventName(alleventset.getName() + count);
 				allevent.setAllEventSet(alleventset);
 				allevent.setEventStatusPl(eventstatuspl);
 				allevent.setPlannedPower(cell3.getNumericCellValue());
+				allevent.setBuyerFine(0);
 				alleventsetdto.setPlannedPower(Double.toString(cell3.getNumericCellValue()));
 				if (cell4 != null) {
 					allevent.setExpectedPrice(cell4.getNumericCellValue());
@@ -267,7 +271,7 @@ public class DRDao extends AbstractBaseDao {
 					allevent.setExpectedPrice(0);
 					alleventsetdto.setPrice("0");
 				}
-				listOfDates=cm.getDateFormatted(cell2.getStringCellValue());
+				listOfDates = cm.getDateFormatted(cell2.getStringCellValue());
 				allevent.setEventStartTime(listOfDates.get(0));
 				allevent.setEventEndTime(listOfDates.get(1));
 				alleventsetdto.setActualPower(null);
@@ -289,7 +293,7 @@ public class DRDao extends AbstractBaseDao {
 				allevent.setParticipatedCustomers(0);
 				alleventsetdto.setShortfall("0");
 				eventrepo.saveAndFlush(allevent);
-				List<EventCustomerDto> listOfCustomers= createEventCustomer(allevent);
+				List<EventCustomerDto> listOfCustomers = createEventCustomer(allevent);
 				alleventsetdto.setListOfCustomers(listOfCustomers);
 				alleventsetdto.setNumberOfCustomers(Integer.toString(listOfCustomers.size()));
 				System.out.println("");
@@ -314,7 +318,7 @@ public class DRDao extends AbstractBaseDao {
 			int count = eventsetrepo.loginUser(phoneNumber, password);
 			if (count > 0) {
 				response.put("status", "LOGGED_IN");
-			}else {
+			} else {
 				response.put("status", "WRONG_CREDENTIALS");
 			}
 
@@ -330,42 +334,49 @@ public class DRDao extends AbstractBaseDao {
 
 		HashMap<String, Object> response = new HashMap<String, Object>();
 		try {
-			
-			List<AllEventDto> listOfEventsdto= new ArrayList<AllEventDto>();
-			for (int i=0;i<eventId.size();i++) {
-			AllEvent allevent = eventrepo.getEventById(eventId.get(i));
-			AllEventDto alleventdto = new AllEventDto();
-			alleventdto.setEventId(allevent.getEventId());
-			alleventdto.setEventName(allevent.getEventName());
-			alleventdto.setEventSetId(allevent.getAllEventSet().getEventSetId());
-			alleventdto.setEventStatus(allevent.getEventStatusPl().getName());
-			alleventdto.setPower(allevent.getActualPower());
-			alleventdto.setPlannedPower(Double.toString(allevent.getPlannedPower()));
-			alleventdto.setPrice(Double.toString(allevent.getExpectedPrice()));
-			alleventdto.setNumberOfCustomers(Integer.toString(allevent.getEventCustomerMappings().size()));
-			alleventdto.setStartTime(allevent.getEventStartTime().toString());
-			alleventdto.setEndTime(allevent.getEventEndTime().toString());
-			alleventdto.setCommittedPower(Double.toString(allevent.getCommitedPower()));
-			alleventdto.setShortfall("0");
-			alleventdto.setActualPower(Double.toString(allevent.getActualPower()));
-			alleventdto.setStartTime(allevent.getEventStartTime().toString());
-			List<EventCustomerDto> listOfCustomers= new ArrayList<EventCustomerDto>();
-			
-			for (int j=0;j<allevent.getEventCustomerMappings().size();j++) {
-				EventCustomerDto evdto= new EventCustomerDto();
-				evdto.setEventId(allevent.getEventId());
-				evdto.setUserId(allevent.getEventCustomerMappings().get(j).getAllUser().getUserId());
-				evdto.setUserName(allevent.getEventCustomerMappings().get(j).getAllUser().getFullName());
-				evdto.setActualPower(allevent.getActualPower());
-				evdto.setCommitments(allevent.getCommitedPower());
-				evdto.setPrice(allevent.getEventCustomerMappings().get(j).getBidPrice());
-				evdto.setIsSelected("Y");
-				// eventCustomerDto.setActualPower(allevent.getActualPower());
-				evdto.setParticipationStatus("1");
-				listOfCustomers.add(evdto);
-			}
-			alleventdto.setListOfCustomers(listOfCustomers);
-			listOfEventsdto.add(alleventdto);
+
+			List<AllEventDto> listOfEventsdto = new ArrayList<AllEventDto>();
+			for (int i = 0; i < eventId.size(); i++) {
+				AllEvent allevent = eventrepo.getEventById(eventId.get(i));
+				AllEventDto alleventdto = new AllEventDto();
+				alleventdto.setEventId(allevent.getEventId());
+				alleventdto.setEventName(allevent.getEventName());
+				alleventdto.setEventSetId(allevent.getAllEventSet().getEventSetId());
+				alleventdto.setEventStatus(allevent.getEventStatusPl().getName());
+				alleventdto.setPower(allevent.getActualPower());
+				alleventdto.setPlannedPower(Double.toString(allevent.getPlannedPower()));
+				alleventdto.setPrice(Double.toString(allevent.getExpectedPrice()));
+				alleventdto.setNumberOfCustomers(Integer.toString(allevent.getEventCustomerMappings().size()));
+				alleventdto.setStartTime(allevent.getEventStartTime().toString());
+				alleventdto.setEndTime(allevent.getEventEndTime().toString());
+				alleventdto.setCommittedPower(Double.toString(allevent.getCommitedPower()));
+				alleventdto.setShortfall("0");
+				alleventdto.setActualPower(Double.toString(allevent.getActualPower()));
+				alleventdto.setStartTime(allevent.getEventStartTime().toString());
+				List<EventCustomerDto> listOfCustomers = new ArrayList<EventCustomerDto>();
+
+				for (int j = 0; j < allevent.getEventCustomerMappings().size(); j++) {
+					EventCustomerDto evdto = new EventCustomerDto();
+					evdto.setEventId(allevent.getEventId());
+					evdto.setUserId(allevent.getEventCustomerMappings().get(j).getAllUser().getUserId());
+					evdto.setUserName(allevent.getEventCustomerMappings().get(j).getAllUser().getFullName());
+					evdto.setActualPower(allevent.getActualPower());
+					evdto.setCommitments(allevent.getCommitedPower());
+					evdto.setPrice(allevent.getEventCustomerMappings().get(j).getBidPrice());
+					evdto.setIsSelected("Y");
+					// eventCustomerDto.setActualPower(allevent.getActualPower());
+					evdto.setParticipationStatus("1");
+					if (allevent.getEventCustomerMappings().get(j).getIsFineApplicable() != null) {
+						evdto.setIsFineApplicable(allevent.getEventCustomerMappings().get(j).getIsFineApplicable());
+					}
+					if (Double.valueOf(allevent.getEventCustomerMappings().get(j).getCustomerFine()) != null) {
+						evdto.setCustomerFine(allevent.getEventCustomerMappings().get(j).getCustomerFine());
+						evdto.setEarnings((allevent.getEventCustomerMappings().get(j).getCommitedPower()*allevent.getEventCustomerMappings().get(j).getBidPrice())- allevent.getEventCustomerMappings().get(j).getCustomerFine());
+					}
+					listOfCustomers.add(evdto);
+				}
+				alleventdto.setListOfCustomers(listOfCustomers);
+				listOfEventsdto.add(alleventdto);
 			}
 			response.put("responseStatus", "1");
 			response.put("responseMessage", "The request was successfully served.");
@@ -390,9 +401,9 @@ public class DRDao extends AbstractBaseDao {
 
 		HashMap<String, Object> response = new HashMap<String, Object>();
 		HashMap<String, Object> internalresponse = new HashMap<String, Object>();
-		List<AllEventDto> listOfEvents= new ArrayList<AllEventDto>();
+		List<AllEventDto> listOfEvents = new ArrayList<AllEventDto>();
 		try {
-			
+
 			AllEventSet alleventset = eventsetrepo.getEventSet(eventSetId);
 			AllEventSetDto alleventsetdto = new AllEventSetDto();
 			alleventsetdto.setEventSetId(alleventset.getEventSetId());
@@ -400,7 +411,7 @@ public class DRDao extends AbstractBaseDao {
 			alleventsetdto.setEventSetStatus(alleventset.getEventSetStatusPl().getStatusName());
 			alleventsetdto.setUserId(alleventset.getAllUser().getUserId());
 			alleventsetdto.setUserName(alleventset.getAllUser().getFullName());
-			for (int i=0;i<alleventset.getAllEvents().size();i++) {
+			for (int i = 0; i < alleventset.getAllEvents().size(); i++) {
 				AllEventDto alleventdto = new AllEventDto();
 				alleventdto.setEventId(alleventset.getAllEvents().get(i).getEventId());
 				alleventdto.setEventName(alleventset.getAllEvents().get(i).getEventName());
@@ -408,9 +419,9 @@ public class DRDao extends AbstractBaseDao {
 				alleventdto.setPower(alleventset.getAllEvents().get(i).getActualPower());
 				listOfEvents.add(alleventdto);
 			}
-			
+
 			internalresponse.put("eventSetDetails", alleventsetdto);
-			internalresponse.put("events",listOfEvents);
+			internalresponse.put("events", listOfEvents);
 			response.put("responseStatus", "1");
 			response.put("responseMessage", "The request was successfully served.");
 			response.put("response", internalresponse);
@@ -426,496 +437,560 @@ public class DRDao extends AbstractBaseDao {
 		}
 		return response;
 	}
-	public HashMap<String,Object> loginDSOUser(String email,String password) throws ParseException {
+
+	public HashMap<String, Object> loginDSOUser(String email, String password) throws ParseException {
 		Date date = new Date();
 		Calendar cal = Calendar.getInstance();
 		cal.setTime(date);
-		cal.add(Calendar.DATE,-7);
+		cal.add(Calendar.DATE, -7);
 		Date weekdate = cal.getTime();
 		cal.setTime(date);
-		cal.add(Calendar.DATE,-30);
+		cal.add(Calendar.DATE, -30);
 		Date monthdate = cal.getTime();
-	    SimpleDateFormat sdf= new SimpleDateFormat("yyyy-MM-dd");
-	    String weekdates = sdf.format(weekdate);
-	    String monthdates = sdf.format(monthdate);
-	    String dates = sdf.format(date);
-	    weekdate = sdf.parse(weekdates);
-	    monthdate = sdf.parse(monthdates);
-	    date = sdf.parse(dates);
-		HashMap<String,Object> response=new HashMap<String, Object>();
-		HashMap<String,Object> internalresponse=new HashMap<String, Object>();
-		CompareHelper ch= new CompareHelper();
-	    try {
-	   int count=this.alluserrepo.loginDSOUser(email, password);
-	   ArrayList<String> status = new ArrayList<String>();
-	   if(count >= 1) {
-		   AllUser alluser= alluserrepo.getUserBymail(email);
-		   List<AllEventSet> listOfWeeklyEvents = eventrepo.getEventSetBydate(weekdate,date);
-		   List<AllEventSet> listOfMonthlyEvents = eventrepo.getEventSetBydate(monthdate,date);
-		   List<AllEventSet> listOfUpcomingEvents = eventrepo.getupcomingEventSet(date);
-		   List<AllEventSetDto> listOfWeeklyEventSetDto = new ArrayList<AllEventSetDto>();
-		   List<AllEventSetDto> listOfMonthlyEventSetDto = new ArrayList<AllEventSetDto>();
-		   List<AllEventSetDto> listOfUpcomingEventSetDto = new ArrayList<AllEventSetDto>();
-		  
-		   for(int i =0;i<listOfWeeklyEvents.size();i++) {
-			   status=ch.countdata(listOfWeeklyEvents.get(i).getAllEvents());
-			   AllEventSetDto alleventsetdto = new AllEventSetDto();
-			   alleventsetdto.setEventSetName(listOfWeeklyEvents.get(i).getName());
-			   alleventsetdto.setEventSetId(listOfWeeklyEvents.get(i).getEventSetId());
-			   alleventsetdto.setEventSetStatus(listOfWeeklyEvents.get(i).getEventSetStatusPl().getStatusName());
-			   alleventsetdto.setUserId(listOfWeeklyEvents.get(i).getAllUser().getUserId());
-			   alleventsetdto.setDateOfOccurence(listOfWeeklyEvents.get(i).getUploadTime().toString());
-			   alleventsetdto.setTotlaPrice(Double.toString(listOfWeeklyEvents.get(i).getTotalPrice()));
-			   alleventsetdto.setPlannedPower(Double.toString(listOfWeeklyEvents.get(i).getPlannedPower()));
-			   alleventsetdto.setUserName(listOfWeeklyEvents.get(i).getAllUser().getFullName());
-			   alleventsetdto.setActualPower(Double.toString(listOfWeeklyEvents.get(i).getActualPower()));
-			   alleventsetdto.setPublishedEvents(status.get(0));
-			   alleventsetdto.setCompletedEvents(status.get(1));
-			   alleventsetdto.setCancelledEvents(status.get(2));
-			   List<AllEventDto> listOfEvents= new ArrayList<AllEventDto>();
-			   for (int j=0;j<listOfWeeklyEvents.get(i).getAllEvents().size();j++) {
-					AllEventDto alleventdto = new AllEventDto();
-					alleventdto.setEventId(listOfWeeklyEvents.get(i).getAllEvents().get(j).getEventId());
-					alleventdto.setEventName(listOfWeeklyEvents.get(i).getAllEvents().get(j).getEventName());
-					alleventdto.setEventStatus(listOfWeeklyEvents.get(i).getAllEvents().get(j).getEventStatusPl().getName());
-					alleventdto.setPower(listOfWeeklyEvents.get(i).getAllEvents().get(j).getActualPower());
-					alleventdto.setPlannedPower(Double.toString(listOfWeeklyEvents.get(i).getAllEvents().get(j).getPlannedPower()));
-					alleventdto.setPrice(Double.toString(listOfWeeklyEvents.get(i).getAllEvents().get(j).getExpectedPrice()));
-					alleventdto.setNumberOfCustomers(Integer.toString(listOfWeeklyEvents.get(i).getAllEvents().get(j).getEventCustomerMappings().size()));
-					alleventdto.setStartTime(listOfWeeklyEvents.get(i).getAllEvents().get(j).getEventStartTime().toString());
-					alleventdto.setEndTime(listOfWeeklyEvents.get(i).getAllEvents().get(j).getEventEndTime().toString());
-					alleventdto.setCommittedPower(Double.toString(listOfWeeklyEvents.get(i).getAllEvents().get(j).getCommitedPower()));
-					alleventdto.setShortfall("0");
-					alleventdto.setActualPower(Double.toString(listOfWeeklyEvents.get(i).getAllEvents().get(j).getActualPower()));
-					alleventdto.setStartTime(listOfWeeklyEvents.get(i).getAllEvents().get(j).getEventStartTime().toString());
-					List<EventCustomerMapping> listOfCustomers = eventcustomerrepo.getEventCustomerMappings(listOfWeeklyEvents.get(i).getAllEvents().get(j).getEventId());
-					List<EventCustomerDto> listOfCustomersdto = new ArrayList<EventCustomerDto>();
-					for(int k=0;k<listOfCustomers.size();k++) {
-						EventCustomerDto eventcustomerdto = new EventCustomerDto();
-						eventcustomerdto.setUserId(listOfCustomers.get(k).getAllUser().getUserId());
-						eventcustomerdto.setUserName(listOfCustomers.get(k).getAllUser().getFullName());
-						eventcustomerdto.setActualPower(listOfCustomers.get(k).getActualPower());
-						eventcustomerdto.setCommitments(listOfCustomers.get(k).getCommitedPower());
-						eventcustomerdto.setPrice(listOfCustomers.get(k).getBidPrice());
-						eventcustomerdto.setIsSelected("Y");
-						// eventCustomerDto.setActualPower(allevent.getActualPower());
-						eventcustomerdto.setParticipationStatus("1");
-						listOfCustomersdto.add(eventcustomerdto);
-						
+		SimpleDateFormat sdf = new SimpleDateFormat("yyyy-MM-dd");
+		String weekdates = sdf.format(weekdate);
+		String monthdates = sdf.format(monthdate);
+		String dates = sdf.format(date);
+		weekdate = sdf.parse(weekdates);
+		monthdate = sdf.parse(monthdates);
+		date = sdf.parse(dates);
+		HashMap<String, Object> response = new HashMap<String, Object>();
+		HashMap<String, Object> internalresponse = new HashMap<String, Object>();
+		CompareHelper ch = new CompareHelper();
+		try {
+			int count = this.alluserrepo.loginDSOUser(email, password);
+			ArrayList<String> status = new ArrayList<String>();
+			if (count >= 1) {
+				AllUser alluser = alluserrepo.getUserBymail(email);
+				List<AllEventSet> listOfWeeklyEvents = eventrepo.getEventSetBydate(weekdate, date);
+				List<AllEventSet> listOfMonthlyEvents = eventrepo.getEventSetBydate(monthdate, date);
+				List<AllEventSet> listOfUpcomingEvents = eventrepo.getupcomingEventSet(date);
+				List<AllEventSetDto> listOfWeeklyEventSetDto = new ArrayList<AllEventSetDto>();
+				List<AllEventSetDto> listOfMonthlyEventSetDto = new ArrayList<AllEventSetDto>();
+				List<AllEventSetDto> listOfUpcomingEventSetDto = new ArrayList<AllEventSetDto>();
+
+				for (int i = 0; i < listOfWeeklyEvents.size(); i++) {
+					status = ch.countdata(listOfWeeklyEvents.get(i).getAllEvents());
+					AllEventSetDto alleventsetdto = new AllEventSetDto();
+					alleventsetdto.setEventSetName(listOfWeeklyEvents.get(i).getName());
+					alleventsetdto.setEventSetId(listOfWeeklyEvents.get(i).getEventSetId());
+					alleventsetdto.setEventSetStatus(listOfWeeklyEvents.get(i).getEventSetStatusPl().getStatusName());
+					alleventsetdto.setUserId(listOfWeeklyEvents.get(i).getAllUser().getUserId());
+					alleventsetdto.setDateOfOccurence(listOfWeeklyEvents.get(i).getUploadTime().toString());
+					alleventsetdto.setTotlaPrice(Double.toString(listOfWeeklyEvents.get(i).getTotalPrice()));
+					alleventsetdto.setPlannedPower(Double.toString(listOfWeeklyEvents.get(i).getPlannedPower()));
+					alleventsetdto.setUserName(listOfWeeklyEvents.get(i).getAllUser().getFullName());
+					alleventsetdto.setActualPower(Double.toString(listOfWeeklyEvents.get(i).getActualPower()));
+					if (status.size() > 0) {
+						alleventsetdto.setPublishedEvents(status.get(0));
+						alleventsetdto.setCompletedEvents(status.get(1));
+						alleventsetdto.setCancelledEvents(status.get(2));
 					}
-					alleventdto.setListOfCustomers(listOfCustomersdto);
-					listOfEvents.add(alleventdto);
-				}
-			   alleventsetdto.setAllEvents(listOfEvents);
-			   listOfWeeklyEventSetDto.add(alleventsetdto);
-		   }
-		   
-		   for(int i =0;i<listOfMonthlyEvents.size();i++) {
-			   status=ch.countdata(listOfMonthlyEvents.get(i).getAllEvents());
-			   AllEventSetDto alleventsetdto = new AllEventSetDto();
-			   alleventsetdto.setEventSetName(listOfMonthlyEvents.get(i).getName());
-			   alleventsetdto.setEventSetId(listOfMonthlyEvents.get(i).getEventSetId());
-			   alleventsetdto.setEventSetStatus(listOfMonthlyEvents.get(i).getEventSetStatusPl().getStatusName());
-			   alleventsetdto.setUserId(listOfMonthlyEvents.get(i).getAllUser().getUserId());
-			   alleventsetdto.setUserName(listOfMonthlyEvents.get(i).getAllUser().getFullName());
-			   alleventsetdto.setDateOfOccurence(listOfMonthlyEvents.get(i).getUploadTime().toString());
-			   alleventsetdto.setTotlaPrice(Double.toString(listOfMonthlyEvents.get(i).getTotalPrice()));
-			   alleventsetdto.setPlannedPower(Double.toString(listOfMonthlyEvents.get(i).getPlannedPower()));
-			   alleventsetdto.setActualPower(Double.toString(listOfMonthlyEvents.get(i).getActualPower()));
-			   alleventsetdto.setPublishedEvents(status.get(0));
-			   alleventsetdto.setCompletedEvents(status.get(1));
-			   alleventsetdto.setCancelledEvents(status.get(2));
-			   List<AllEventDto> listOfEvents= new ArrayList<AllEventDto>();
-			   for (int j=0;j<listOfMonthlyEvents.get(i).getAllEvents().size();j++) {
-					AllEventDto alleventdto = new AllEventDto();
-					alleventdto.setEventId(listOfMonthlyEvents.get(i).getAllEvents().get(j).getEventId());
-					alleventdto.setEventName(listOfMonthlyEvents.get(i).getAllEvents().get(j).getEventName());
-					alleventdto.setEventStatus(listOfMonthlyEvents.get(i).getAllEvents().get(j).getEventStatusPl().getName());
-					alleventdto.setPower(listOfMonthlyEvents.get(i).getAllEvents().get(j).getActualPower());
-					alleventdto.setPlannedPower(Double.toString(listOfMonthlyEvents.get(i).getAllEvents().get(j).getPlannedPower()));
-					alleventdto.setPrice(Double.toString(listOfMonthlyEvents.get(i).getAllEvents().get(j).getExpectedPrice()));
-					alleventdto.setNumberOfCustomers(Integer.toString(listOfMonthlyEvents.get(i).getAllEvents().get(j).getEventCustomerMappings().size()));
-					alleventdto.setStartTime(listOfMonthlyEvents.get(i).getAllEvents().get(j).getEventStartTime().toString());
-					alleventdto.setEndTime(listOfMonthlyEvents.get(i).getAllEvents().get(j).getEventEndTime().toString());
-					alleventdto.setCommittedPower(Double.toString(listOfMonthlyEvents.get(i).getAllEvents().get(j).getCommitedPower()));
-					alleventdto.setShortfall("0");
-					alleventdto.setActualPower(Double.toString(listOfMonthlyEvents.get(i).getAllEvents().get(j).getActualPower()));
-					alleventdto.setStartTime(listOfMonthlyEvents.get(i).getAllEvents().get(j).getEventStartTime().toString());
-					List<EventCustomerMapping> listOfCustomers = eventcustomerrepo.getEventCustomerMappings(listOfMonthlyEvents.get(i).getAllEvents().get(j).getEventId());
-					List<EventCustomerDto> listOfCustomersdto = new ArrayList<EventCustomerDto>();
-					for(int k=0;k<listOfCustomers.size();k++) {
-						EventCustomerDto eventcustomerdto = new EventCustomerDto();
-						eventcustomerdto.setUserId(listOfCustomers.get(k).getAllUser().getUserId());
-						eventcustomerdto.setUserName(listOfCustomers.get(k).getAllUser().getFullName());
-						eventcustomerdto.setActualPower(listOfCustomers.get(k).getActualPower());
-						eventcustomerdto.setCommitments(listOfCustomers.get(k).getCommitedPower());
-						eventcustomerdto.setPrice(listOfCustomers.get(k).getBidPrice());
-						eventcustomerdto.setIsSelected("Y");
-						// eventCustomerDto.setActualPower(allevent.getActualPower());
-						eventcustomerdto.setParticipationStatus("1");
-						listOfCustomersdto.add(eventcustomerdto);
-						
-					}
-					alleventdto.setListOfCustomers(listOfCustomersdto);
-					listOfEvents.add(alleventdto);
-				}
-			   alleventsetdto.setAllEvents(listOfEvents);
-			   listOfMonthlyEventSetDto.add(alleventsetdto);
-		   }
-		   
-		   for(int i =0;i<listOfUpcomingEvents.size();i++) {
-			   status=ch.countdata(listOfUpcomingEvents.get(i).getAllEvents());
-			   AllEventSetDto alleventsetdto = new AllEventSetDto();
-			   alleventsetdto.setEventSetName(listOfUpcomingEvents.get(i).getName());
-			   alleventsetdto.setEventSetId(listOfUpcomingEvents.get(i).getEventSetId());
-			   alleventsetdto.setEventSetStatus(listOfUpcomingEvents.get(i).getEventSetStatusPl().getStatusName());
-			   alleventsetdto.setUserId(listOfUpcomingEvents.get(i).getAllUser().getUserId());
-			   alleventsetdto.setUserName(listOfUpcomingEvents.get(i).getAllUser().getFullName());
-			   alleventsetdto.setDateOfOccurence(listOfUpcomingEvents.get(i).getUploadTime().toString());
-			   alleventsetdto.setTotlaPrice(Double.toString(listOfUpcomingEvents.get(i).getTotalPrice()));
-			   alleventsetdto.setPlannedPower(Double.toString(listOfUpcomingEvents.get(i).getPlannedPower()));
-			   alleventsetdto.setActualPower(Double.toString(listOfUpcomingEvents.get(i).getActualPower()));
-			   alleventsetdto.setPublishedEvents(status.get(0));
-			   alleventsetdto.setCompletedEvents(status.get(1));
-			   alleventsetdto.setCancelledEvents(status.get(2));
-			   List<AllEventDto> listOfEvents= new ArrayList<AllEventDto>();
-			   for (int j=0;j<listOfUpcomingEvents.get(i).getAllEvents().size();j++) {
-					AllEventDto alleventdto = new AllEventDto();
-					alleventdto.setEventId(listOfUpcomingEvents.get(i).getAllEvents().get(j).getEventId());
-					alleventdto.setEventName(listOfUpcomingEvents.get(i).getAllEvents().get(j).getEventName());
-					alleventdto.setEventStatus(listOfUpcomingEvents.get(i).getAllEvents().get(j).getEventStatusPl().getName());
-					alleventdto.setPower(listOfUpcomingEvents.get(i).getAllEvents().get(j).getActualPower());
-					alleventdto.setPlannedPower(Double.toString(listOfUpcomingEvents.get(i).getAllEvents().get(j).getPlannedPower()));
-					alleventdto.setPrice(Double.toString(listOfUpcomingEvents.get(i).getAllEvents().get(j).getExpectedPrice()));
-					alleventdto.setNumberOfCustomers(Integer.toString(listOfUpcomingEvents.get(i).getAllEvents().get(j).getEventCustomerMappings().size()));
-					alleventdto.setStartTime(listOfUpcomingEvents.get(i).getAllEvents().get(j).getEventStartTime().toString());
-					alleventdto.setEndTime(listOfUpcomingEvents.get(i).getAllEvents().get(j).getEventEndTime().toString());
-					alleventdto.setCommittedPower(Double.toString(listOfUpcomingEvents.get(i).getAllEvents().get(j).getCommitedPower()));
-					alleventdto.setShortfall("0");
-					alleventdto.setActualPower(Double.toString(listOfUpcomingEvents.get(i).getAllEvents().get(j).getActualPower()));
-					alleventdto.setStartTime(listOfUpcomingEvents.get(i).getAllEvents().get(j).getEventStartTime().toString());
-					List<EventCustomerMapping> listOfCustomers = eventcustomerrepo.getEventCustomerMappings(listOfUpcomingEvents.get(i).getAllEvents().get(j).getEventId());
-					List<EventCustomerDto> listOfCustomersdto = new ArrayList<EventCustomerDto>();
-					for(int k=0;k<listOfCustomers.size();k++) {
-						EventCustomerDto eventcustomerdto = new EventCustomerDto();
-						eventcustomerdto.setUserId(listOfCustomers.get(k).getAllUser().getUserId());
-						eventcustomerdto.setUserName(listOfCustomers.get(k).getAllUser().getFullName());
-						if (new Double(listOfCustomers.get(k).getActualPower()) !=null) {
-							eventcustomerdto.setActualPower(listOfCustomers.get(k).getActualPower());	
+					List<AllEventDto> listOfEvents = new ArrayList<AllEventDto>();
+					for (int j = 0; j < listOfWeeklyEvents.get(i).getAllEvents().size(); j++) {
+						AllEventDto alleventdto = new AllEventDto();
+						alleventdto.setEventId(listOfWeeklyEvents.get(i).getAllEvents().get(j).getEventId());
+						alleventdto.setEventName(listOfWeeklyEvents.get(i).getAllEvents().get(j).getEventName());
+						alleventdto.setEventStatus(
+								listOfWeeklyEvents.get(i).getAllEvents().get(j).getEventStatusPl().getName());
+						alleventdto.setPower(listOfWeeklyEvents.get(i).getAllEvents().get(j).getActualPower());
+						alleventdto.setPlannedPower(
+								Double.toString(listOfWeeklyEvents.get(i).getAllEvents().get(j).getPlannedPower()));
+						alleventdto.setPrice(
+								Double.toString(listOfWeeklyEvents.get(i).getAllEvents().get(j).getExpectedPrice()));
+						alleventdto.setNumberOfCustomers(Integer.toString(
+								listOfWeeklyEvents.get(i).getAllEvents().get(j).getEventCustomerMappings().size()));
+						alleventdto.setStartTime(
+								listOfWeeklyEvents.get(i).getAllEvents().get(j).getEventStartTime().toString());
+						alleventdto.setEndTime(
+								listOfWeeklyEvents.get(i).getAllEvents().get(j).getEventEndTime().toString());
+						alleventdto.setCommittedPower(
+								Double.toString(listOfWeeklyEvents.get(i).getAllEvents().get(j).getCommitedPower()));
+						alleventdto.setShortfall("0");
+						alleventdto.setActualPower(
+								Double.toString(listOfWeeklyEvents.get(i).getAllEvents().get(j).getActualPower()));
+						alleventdto.setStartTime(
+								listOfWeeklyEvents.get(i).getAllEvents().get(j).getEventStartTime().toString());
+						if (listOfWeeklyEvents.get(i).getAllEvents().get(j).getIsFineApplicable() != null) {
+							alleventdto.setIsFineApplicable(
+									listOfWeeklyEvents.get(i).getAllEvents().get(j).getIsFineApplicable());
 						}
-						if (new Double(listOfCustomers.get(k).getCommitedPower() )!=null) {
-						eventcustomerdto.setCommitments(listOfCustomers.get(k).getCommitedPower());
+						if (Double.valueOf(listOfWeeklyEvents.get(i).getAllEvents().get(j).getBuyerFine()) != null) {
+							alleventdto.setBuyerFine(listOfWeeklyEvents.get(i).getAllEvents().get(j).getBuyerFine());
 						}
-						eventcustomerdto.setPrice(listOfCustomers.get(k).getBidPrice());
-						eventcustomerdto.setIsSelected("Y");
-						// eventCustomerDto.setActualPower(allevent.getActualPower());
-						eventcustomerdto.setParticipationStatus("1");
-						listOfCustomersdto.add(eventcustomerdto);
-						
+						List<EventCustomerMapping> listOfCustomers = eventcustomerrepo
+								.getEventCustomerMappings(listOfWeeklyEvents.get(i).getAllEvents().get(j).getEventId());
+						List<EventCustomerDto> listOfCustomersdto = new ArrayList<EventCustomerDto>();
+						for (int k = 0; k < listOfCustomers.size(); k++) {
+							EventCustomerDto eventcustomerdto = new EventCustomerDto();
+							eventcustomerdto.setUserId(listOfCustomers.get(k).getAllUser().getUserId());
+							eventcustomerdto.setUserName(listOfCustomers.get(k).getAllUser().getFullName());
+							eventcustomerdto.setActualPower(listOfCustomers.get(k).getActualPower());
+							eventcustomerdto.setCommitments(listOfCustomers.get(k).getCommitedPower());
+							eventcustomerdto.setPrice(listOfCustomers.get(k).getBidPrice());
+							eventcustomerdto.setIsSelected("Y");
+							// eventCustomerDto.setActualPower(allevent.getActualPower());
+							eventcustomerdto.setParticipationStatus("1");
+							if (listOfCustomers.get(k).getIsFineApplicable() != null) {
+								eventcustomerdto.setIsFineApplicable(listOfCustomers.get(k).getIsFineApplicable());
+							}
+							if (Double.valueOf(listOfCustomers.get(k).getCustomerFine()) != null) {
+								eventcustomerdto.setCustomerFine(listOfCustomers.get(k).getCustomerFine());
+								eventcustomerdto.setEarnings((listOfCustomers.get(k).getCommitedPower()*listOfCustomers.get(k).getBidPrice())-listOfCustomers.get(k).getCustomerFine() );
+							}
+							listOfCustomersdto.add(eventcustomerdto);
+
+						}
+						alleventdto.setListOfCustomers(listOfCustomersdto);
+						listOfEvents.add(alleventdto);
 					}
-					alleventdto.setListOfCustomers(listOfCustomersdto);
-					listOfEvents.add(alleventdto);
+					alleventsetdto.setAllEvents(listOfEvents);
+					listOfWeeklyEventSetDto.add(alleventsetdto);
 				}
-			   alleventsetdto.setAllEvents(listOfEvents);
-			   listOfUpcomingEventSetDto.add(alleventsetdto);
-		   }
-		   internalresponse.put("weeklyEvents", listOfWeeklyEventSetDto);
-		   internalresponse.put("monthlyEvents", listOfMonthlyEventSetDto);
-		   internalresponse.put("upcomingEvents", listOfUpcomingEventSetDto);
-		   internalresponse.put("userId", alluser.getUserId());
-		   response.put("responseStatus", "1");
-			response.put("responseMessage", "The request was successfully served.");
-			response.put("response", internalresponse);
-			response.put("customMessage", CustomMessages.getCustomMessages("SL"));
-	   
-	   }
-	   else if(count < 1) {
-		   response.put("responseStatus", "1");
-			response.put("responseMessage", "The request was successfully served.");
-			response.put("customMessage", CustomMessages.getCustomMessages("WL"));
-			response.put("response", internalresponse);
-	   }
-	    
-	    }
-	    catch (Exception e) {
-	        System.out.println("Error in checkExistence" + e.getMessage());
-	        e.printStackTrace();
-	        response.put("responseStatus", "2");
+
+				for (int i = 0; i < listOfMonthlyEvents.size(); i++) {
+					status = ch.countdata(listOfMonthlyEvents.get(i).getAllEvents());
+					AllEventSetDto alleventsetdto = new AllEventSetDto();
+					alleventsetdto.setEventSetName(listOfMonthlyEvents.get(i).getName());
+					alleventsetdto.setEventSetId(listOfMonthlyEvents.get(i).getEventSetId());
+					alleventsetdto.setEventSetStatus(listOfMonthlyEvents.get(i).getEventSetStatusPl().getStatusName());
+					alleventsetdto.setUserId(listOfMonthlyEvents.get(i).getAllUser().getUserId());
+					alleventsetdto.setUserName(listOfMonthlyEvents.get(i).getAllUser().getFullName());
+					alleventsetdto.setDateOfOccurence(listOfMonthlyEvents.get(i).getUploadTime().toString());
+					alleventsetdto.setTotlaPrice(Double.toString(listOfMonthlyEvents.get(i).getTotalPrice()));
+					alleventsetdto.setPlannedPower(Double.toString(listOfMonthlyEvents.get(i).getPlannedPower()));
+					alleventsetdto.setActualPower(Double.toString(listOfMonthlyEvents.get(i).getActualPower()));
+					if (status.size() > 0) {
+						alleventsetdto.setPublishedEvents(status.get(0));
+						alleventsetdto.setCompletedEvents(status.get(1));
+						alleventsetdto.setCancelledEvents(status.get(2));
+					}
+					List<AllEventDto> listOfEvents = new ArrayList<AllEventDto>();
+					for (int j = 0; j < listOfMonthlyEvents.get(i).getAllEvents().size(); j++) {
+						AllEventDto alleventdto = new AllEventDto();
+						alleventdto.setEventId(listOfMonthlyEvents.get(i).getAllEvents().get(j).getEventId());
+						alleventdto.setEventName(listOfMonthlyEvents.get(i).getAllEvents().get(j).getEventName());
+						alleventdto.setEventStatus(
+								listOfMonthlyEvents.get(i).getAllEvents().get(j).getEventStatusPl().getName());
+						alleventdto.setPower(listOfMonthlyEvents.get(i).getAllEvents().get(j).getActualPower());
+						alleventdto.setPlannedPower(
+								Double.toString(listOfMonthlyEvents.get(i).getAllEvents().get(j).getPlannedPower()));
+						alleventdto.setPrice(
+								Double.toString(listOfMonthlyEvents.get(i).getAllEvents().get(j).getExpectedPrice()));
+						alleventdto.setNumberOfCustomers(Integer.toString(
+								listOfMonthlyEvents.get(i).getAllEvents().get(j).getEventCustomerMappings().size()));
+						alleventdto.setStartTime(
+								listOfMonthlyEvents.get(i).getAllEvents().get(j).getEventStartTime().toString());
+						alleventdto.setEndTime(
+								listOfMonthlyEvents.get(i).getAllEvents().get(j).getEventEndTime().toString());
+						alleventdto.setCommittedPower(
+								Double.toString(listOfMonthlyEvents.get(i).getAllEvents().get(j).getCommitedPower()));
+						alleventdto.setShortfall("0");
+						alleventdto.setActualPower(
+								Double.toString(listOfMonthlyEvents.get(i).getAllEvents().get(j).getActualPower()));
+						alleventdto.setStartTime(
+								listOfMonthlyEvents.get(i).getAllEvents().get(j).getEventStartTime().toString());
+						if (listOfWeeklyEvents.get(i).getAllEvents().get(j).getIsFineApplicable() != null) {
+							alleventdto.setIsFineApplicable(
+									listOfWeeklyEvents.get(i).getAllEvents().get(j).getIsFineApplicable());
+						}
+						if (Double.valueOf(listOfWeeklyEvents.get(i).getAllEvents().get(j).getBuyerFine()) != null) {
+							alleventdto.setBuyerFine(listOfWeeklyEvents.get(i).getAllEvents().get(j).getBuyerFine());
+						}
+						List<EventCustomerMapping> listOfCustomers = eventcustomerrepo.getEventCustomerMappings(
+								listOfMonthlyEvents.get(i).getAllEvents().get(j).getEventId());
+						List<EventCustomerDto> listOfCustomersdto = new ArrayList<EventCustomerDto>();
+						for (int k = 0; k < listOfCustomers.size(); k++) {
+							EventCustomerDto eventcustomerdto = new EventCustomerDto();
+							eventcustomerdto.setUserId(listOfCustomers.get(k).getAllUser().getUserId());
+							eventcustomerdto.setUserName(listOfCustomers.get(k).getAllUser().getFullName());
+							eventcustomerdto.setActualPower(listOfCustomers.get(k).getActualPower());
+							eventcustomerdto.setCommitments(listOfCustomers.get(k).getCommitedPower());
+							eventcustomerdto.setPrice(listOfCustomers.get(k).getBidPrice());
+							eventcustomerdto.setIsSelected("Y");
+							// eventCustomerDto.setActualPower(allevent.getActualPower());
+							eventcustomerdto.setParticipationStatus("1");
+							if (listOfCustomers.get(k).getIsFineApplicable() != null) {
+								eventcustomerdto.setIsFineApplicable(listOfCustomers.get(k).getIsFineApplicable());
+							}
+							if (Double.valueOf(listOfCustomers.get(k).getCustomerFine()) != null) {
+								eventcustomerdto.setCustomerFine(listOfCustomers.get(k).getCustomerFine());
+								eventcustomerdto.setEarnings((listOfCustomers.get(k).getCommitedPower()*listOfCustomers.get(k).getBidPrice())-listOfCustomers.get(k).getCustomerFine() );
+							}
+							listOfCustomersdto.add(eventcustomerdto);
+
+						}
+						alleventdto.setListOfCustomers(listOfCustomersdto);
+						listOfEvents.add(alleventdto);
+					}
+					alleventsetdto.setAllEvents(listOfEvents);
+					listOfMonthlyEventSetDto.add(alleventsetdto);
+				}
+
+				for (int i = 0; i < listOfUpcomingEvents.size(); i++) {
+					status = ch.countdata(listOfUpcomingEvents.get(i).getAllEvents());
+					AllEventSetDto alleventsetdto = new AllEventSetDto();
+					alleventsetdto.setEventSetName(listOfUpcomingEvents.get(i).getName());
+					alleventsetdto.setEventSetId(listOfUpcomingEvents.get(i).getEventSetId());
+					alleventsetdto.setEventSetStatus(listOfUpcomingEvents.get(i).getEventSetStatusPl().getStatusName());
+					alleventsetdto.setUserId(listOfUpcomingEvents.get(i).getAllUser().getUserId());
+					alleventsetdto.setUserName(listOfUpcomingEvents.get(i).getAllUser().getFullName());
+					alleventsetdto.setDateOfOccurence(listOfUpcomingEvents.get(i).getUploadTime().toString());
+					alleventsetdto.setTotlaPrice(Double.toString(listOfUpcomingEvents.get(i).getTotalPrice()));
+					alleventsetdto.setPlannedPower(Double.toString(listOfUpcomingEvents.get(i).getPlannedPower()));
+					alleventsetdto.setActualPower(Double.toString(listOfUpcomingEvents.get(i).getActualPower()));
+					if (status.size() > 0) {
+						alleventsetdto.setPublishedEvents(status.get(0));
+						alleventsetdto.setCompletedEvents(status.get(1));
+						alleventsetdto.setCancelledEvents(status.get(2));
+					}
+					List<AllEventDto> listOfEvents = new ArrayList<AllEventDto>();
+					for (int j = 0; j < listOfUpcomingEvents.get(i).getAllEvents().size(); j++) {
+						AllEventDto alleventdto = new AllEventDto();
+						alleventdto.setEventId(listOfUpcomingEvents.get(i).getAllEvents().get(j).getEventId());
+						alleventdto.setEventName(listOfUpcomingEvents.get(i).getAllEvents().get(j).getEventName());
+						alleventdto.setEventStatus(
+								listOfUpcomingEvents.get(i).getAllEvents().get(j).getEventStatusPl().getName());
+						alleventdto.setPower(listOfUpcomingEvents.get(i).getAllEvents().get(j).getActualPower());
+						alleventdto.setPlannedPower(
+								Double.toString(listOfUpcomingEvents.get(i).getAllEvents().get(j).getPlannedPower()));
+						alleventdto.setPrice(
+								Double.toString(listOfUpcomingEvents.get(i).getAllEvents().get(j).getExpectedPrice()));
+						alleventdto.setNumberOfCustomers(Integer.toString(
+								listOfUpcomingEvents.get(i).getAllEvents().get(j).getEventCustomerMappings().size()));
+						alleventdto.setStartTime(
+								listOfUpcomingEvents.get(i).getAllEvents().get(j).getEventStartTime().toString());
+						alleventdto.setEndTime(
+								listOfUpcomingEvents.get(i).getAllEvents().get(j).getEventEndTime().toString());
+						alleventdto.setCommittedPower(
+								Double.toString(listOfUpcomingEvents.get(i).getAllEvents().get(j).getCommitedPower()));
+						alleventdto.setShortfall("0");
+						alleventdto.setActualPower(
+								Double.toString(listOfUpcomingEvents.get(i).getAllEvents().get(j).getActualPower()));
+						alleventdto.setStartTime(
+								listOfUpcomingEvents.get(i).getAllEvents().get(j).getEventStartTime().toString());
+						if (listOfWeeklyEvents.get(i).getAllEvents().get(j).getIsFineApplicable() != null) {
+							alleventdto.setIsFineApplicable(
+									listOfWeeklyEvents.get(i).getAllEvents().get(j).getIsFineApplicable());
+						}
+						if (Double.valueOf(listOfWeeklyEvents.get(i).getAllEvents().get(j).getBuyerFine()) != null) {
+							alleventdto.setBuyerFine(listOfWeeklyEvents.get(i).getAllEvents().get(j).getBuyerFine());
+						}
+						List<EventCustomerMapping> listOfCustomers = eventcustomerrepo.getEventCustomerMappings(
+								listOfUpcomingEvents.get(i).getAllEvents().get(j).getEventId());
+						List<EventCustomerDto> listOfCustomersdto = new ArrayList<EventCustomerDto>();
+						for (int k = 0; k < listOfCustomers.size(); k++) {
+							EventCustomerDto eventcustomerdto = new EventCustomerDto();
+							eventcustomerdto.setUserId(listOfCustomers.get(k).getAllUser().getUserId());
+							eventcustomerdto.setUserName(listOfCustomers.get(k).getAllUser().getFullName());
+							if (new Double(listOfCustomers.get(k).getActualPower()) != null) {
+								eventcustomerdto.setActualPower(listOfCustomers.get(k).getActualPower());
+							}
+							if (new Double(listOfCustomers.get(k).getCommitedPower()) != null) {
+								eventcustomerdto.setCommitments(listOfCustomers.get(k).getCommitedPower());
+							}
+							eventcustomerdto.setPrice(listOfCustomers.get(k).getBidPrice());
+							eventcustomerdto.setIsSelected("Y");
+							// eventCustomerDto.setActualPower(allevent.getActualPower());
+							eventcustomerdto.setParticipationStatus("1");
+							if (listOfCustomers.get(k).getIsFineApplicable() != null) {
+								eventcustomerdto.setIsFineApplicable(listOfCustomers.get(k).getIsFineApplicable());
+							}
+							if (Double.valueOf(listOfCustomers.get(k).getCustomerFine()) != null) {
+								eventcustomerdto.setCustomerFine(listOfCustomers.get(k).getCustomerFine());
+								eventcustomerdto.setEarnings((listOfCustomers.get(k).getCommitedPower()*listOfCustomers.get(k).getBidPrice())-listOfCustomers.get(k).getCustomerFine() );
+							}
+							listOfCustomersdto.add(eventcustomerdto);
+
+						}
+						alleventdto.setListOfCustomers(listOfCustomersdto);
+						listOfEvents.add(alleventdto);
+					}
+					alleventsetdto.setAllEvents(listOfEvents);
+					listOfUpcomingEventSetDto.add(alleventsetdto);
+				}
+				internalresponse.put("weeklyEvents", listOfWeeklyEventSetDto);
+				internalresponse.put("monthlyEvents", listOfMonthlyEventSetDto);
+				internalresponse.put("upcomingEvents", listOfUpcomingEventSetDto);
+				internalresponse.put("userId", alluser.getUserId());
+				response.put("responseStatus", "1");
+				response.put("responseMessage", "The request was successfully served.");
+				response.put("response", internalresponse);
+				response.put("customMessage", CustomMessages.getCustomMessages("SL"));
+
+			} else if (count < 1) {
+				response.put("responseStatus", "1");
+				response.put("responseMessage", "The request was successfully served.");
+				response.put("customMessage", CustomMessages.getCustomMessages("WL"));
+				response.put("response", internalresponse);
+			}
+
+		} catch (Exception e) {
+			System.out.println("Error in checkExistence" + e.getMessage());
+			e.printStackTrace();
+			response.put("responseStatus", "2");
 			response.put("responseMessage", "Internal Server Error");
 			response.put("response", null);
 			response.put("customMessage", null);
-	       
-	    }
-	    return response;
-	}
-	
-	public HashMap<String,Object> updateEvent(List<Integer> events, int eventSetId) {
-        
-    	HashMap<String,Object> response=new HashMap<String, Object>();
-        try {
-        	
-        		for(int i=0;i<events.size();i++) {
-        	    	   eventrepo.updateEvent(2, events.get(i));
-        	    	   eventcustomerrepo.updateEventCustomer(2, events.get(i));
-        	          }	
-          int eventCount = eventrepo.getEventByStatusId(events.get(0));
-          if(eventCount >0) {
-        	  eventsetrepo.updateEvent(3, eventSetId);
-          } else {
-        	  eventsetrepo.updateEvent(2, eventSetId);
-          }
-			response.put("responseStatus", "1");
-			response.put("responseMessage", "The request was successfully served.");
-			response.put("response",null);
-			response.put("customMessage", null);
-			
 
-       }
-        
-        
-        catch (Exception e) {
-            System.out.println("Error in checkExistence" + e.getMessage());
-            e.printStackTrace();
-			response.put("responseStatus", "2");
-			response.put("responseMessage", "Internal Server Error.");
-			response.put("response",null);
-			response.put("customMessage", null);
-			
-        }
-        return response;
-    }
-	
-	
-public HashMap<String,Object> cancelEvent(int event) {
-        
-    	HashMap<String,Object> response=new HashMap<String, Object>();
-        try {
-        	
-        	    	   eventrepo.updateEvent(4, event);
-        	    	   //eventcustomerrepo.updateEventCustomer(2, events.get(i));
-        	
-			response.put("responseStatus", "1");
-			response.put("responseMessage", "The request was successfully served.");
-			response.put("response",null);
-			response.put("customMessage", null);
-			
-
-       }
-        
-        
-        catch (Exception e) {
-            System.out.println("Error in checkExistence" + e.getMessage());
-            e.printStackTrace();
-			response.put("responseStatus", "2");
-			response.put("responseMessage", "Internal Server Error.");
-			response.put("response",null);
-			response.put("customMessage", null);
-			
-        }
-        return response;
-    }
-
-	public HashMap<String,Object> updateCustomer(List<Integer> customer,List<Integer> events) {
-        
-    	HashMap<String,Object> response=new HashMap<String, Object>();
-    	List<EventCustomerMapping> listOfEventCustMapping = new ArrayList<EventCustomerMapping>();
-        try {
-        	for (int i=0;i<events.size();i++) {
-        	eventcustomerrepo.removeCustomers(events.get(i));
-        	int count = eventcustomerrepo.getEventCustomerCount();
-        	AllEvent allevent = eventrepo.getEventById(events.get(i));
-        	for (int j=0;j<customer.size();j++) {
-				count++;
-				AllUser alluser =alluserrepo.getUserById(customer.get(j));
-				//EventCustomerDto eventCustomerDto = new EventCustomerDto();
-				EventCustomerMapping eventCustomerMapping = new EventCustomerMapping();
-				eventCustomerMapping.setAllUser(alluser);
-				eventCustomerMapping.setEventCustomerMappingId(count);
-				eventCustomerMapping.setAllEvent(allevent);
-				listOfEventCustMapping.add(eventCustomerMapping);
 		}
-        	}
-		eventcustomerrepo.saveAll(listOfEventCustMapping);
-		response.put("responseStatus", "1");
-		response.put("responseMessage", "The request was successfully served.");
-		response.put("response", null);
-		response.put("customMessage", null);
+		return response;
+	}
 
-       }
-        
-        
-        catch (Exception e) {
-            System.out.println("Error in checkExistence" + e.getMessage());
-            e.printStackTrace();
+	public HashMap<String, Object> updateEvent(List<Integer> events, int eventSetId) {
+
+		HashMap<String, Object> response = new HashMap<String, Object>();
+		try {
+
+			for (int i = 0; i < events.size(); i++) {
+				eventrepo.updateEvent(2, events.get(i));
+				eventcustomerrepo.updateEventCustomer(2, events.get(i));
+			}
+			int eventCount = eventrepo.getEventByStatusId(events.get(0));
+			if (eventCount > 0) {
+				eventsetrepo.updateEvent(3, eventSetId);
+			} else {
+				eventsetrepo.updateEvent(2, eventSetId);
+			}
+			response.put("responseStatus", "1");
+			response.put("responseMessage", "The request was successfully served.");
+			response.put("response", null);
+			response.put("customMessage", null);
+
+		}
+
+		catch (Exception e) {
+			System.out.println("Error in checkExistence" + e.getMessage());
+			e.printStackTrace();
 			response.put("responseStatus", "2");
 			response.put("responseMessage", "Internal Server Error.");
 			response.put("response", null);
 			response.put("customMessage", null);
 
-           
-        }
-        return response;
-    }
+		}
+		return response;
+	}
 
-	public HashMap<String,Object> getCustomerForEvents(List<Integer> events) {
-        
-		List<EventCustomerDto> listOfEventCustDto = new ArrayList<EventCustomerDto>();
-    	HashMap<String,Object> response=new HashMap<String, Object>();
-    	HashMap<String,Object> internalResponse=new HashMap<String, Object>();
-        try {
-        
-        	if(events.size() > 1) {
-        		List<UserAccessLevelMapping> listOfCustomers = eventcustomerrepo.getUserAccessLevel();
-        		for (int i=0;i<events.size();i++) {
-        		for (int j=0;j<listOfCustomers.size();j++) {
-        			AllEvent allevent = eventrepo.getEventById(events.get(i));
-					EventCustomerDto eventCustomerDto = new EventCustomerDto();
-					eventCustomerDto.setUserId(listOfCustomers.get(j).getAllUser().getUserId());
-					eventCustomerDto.setUserName(listOfCustomers.get(j).getAllUser().getFullName());
-					eventCustomerDto.setIsSelected("N");
-					eventCustomerDto.setActualPower(allevent.getActualPower());
-					eventCustomerDto.setParticipationStatus("1"); //hardcoded
-					eventCustomerDto.setCommitments(allevent.getCommitedPower());
-					eventCustomerDto.setPrice(allevent.getExpectedPrice());
-				//	if (listOfCustomers.get(j).)
-					// eventCustomerDto.setEventId(event.getEventId());
-					listOfEventCustDto.add(eventCustomerDto);
+	public HashMap<String, Object> cancelEvent(int event) {
+
+		HashMap<String, Object> response = new HashMap<String, Object>();
+		try {
+
+			eventrepo.updateEvent(4, event);
+			// eventcustomerrepo.updateEventCustomer(2, events.get(i));
+
+			response.put("responseStatus", "1");
+			response.put("responseMessage", "The request was successfully served.");
+			response.put("response", null);
+			response.put("customMessage", null);
+
+		}
+
+		catch (Exception e) {
+			System.out.println("Error in checkExistence" + e.getMessage());
+			e.printStackTrace();
+			response.put("responseStatus", "2");
+			response.put("responseMessage", "Internal Server Error.");
+			response.put("response", null);
+			response.put("customMessage", null);
+
+		}
+		return response;
+	}
+
+	public HashMap<String, Object> updateCustomer(List<Integer> customer, List<Integer> events) {
+
+		HashMap<String, Object> response = new HashMap<String, Object>();
+		List<EventCustomerMapping> listOfEventCustMapping = new ArrayList<EventCustomerMapping>();
+		try {
+			for (int i = 0; i < events.size(); i++) {
+				eventcustomerrepo.removeCustomers(events.get(i));
+				int count = eventcustomerrepo.getEventCustomerCount();
+				AllEvent allevent = eventrepo.getEventById(events.get(i));
+				for (int j = 0; j < customer.size(); j++) {
+					count++;
+					AllUser alluser = alluserrepo.getUserById(customer.get(j));
+					// EventCustomerDto eventCustomerDto = new EventCustomerDto();
+					EventCustomerMapping eventCustomerMapping = new EventCustomerMapping();
+					eventCustomerMapping.setAllUser(alluser);
+					eventCustomerMapping.setEventCustomerMappingId(count);
+					eventCustomerMapping.setAllEvent(allevent);
+					listOfEventCustMapping.add(eventCustomerMapping);
+				}
 			}
-        		}
-        	} else {
-        		AllEvent allevent = eventrepo.getEventById(events.get(0));
-        		List<UserAccessLevelMapping> listOfCustomers = eventcustomerrepo.getUserAccessLevel(allevent.getAllEventSet().getAllUser().getUserId());
-        		List<EventCustomerMapping> listOfEventCustomers = eventcustomerrepo.getEventCustomerMappings(events.get(0));
-        		for (int j=0;j<listOfCustomers.size();j++) {
-        			EventCustomerDto eventCustomerDto = new EventCustomerDto();
-        			if (listOfEventCustomers.size() > 0) {
-        				
-        			if (CompareHelper.compareData(listOfEventCustomers, listOfCustomers.get(j).getAllUser().getUserId()) != null) 
-        			{
-        			EventCustomerMapping evtmap =CompareHelper.compareData(listOfEventCustomers, listOfCustomers.get(j).getAllUser().getUserId());
-        				eventCustomerDto.setIsSelected("Y");
+			eventcustomerrepo.saveAll(listOfEventCustMapping);
+			response.put("responseStatus", "1");
+			response.put("responseMessage", "The request was successfully served.");
+			response.put("response", null);
+			response.put("customMessage", null);
+
+		}
+
+		catch (Exception e) {
+			System.out.println("Error in checkExistence" + e.getMessage());
+			e.printStackTrace();
+			response.put("responseStatus", "2");
+			response.put("responseMessage", "Internal Server Error.");
+			response.put("response", null);
+			response.put("customMessage", null);
+
+		}
+		return response;
+	}
+
+	public HashMap<String, Object> getCustomerForEvents(List<Integer> events) {
+
+		List<EventCustomerDto> listOfEventCustDto = new ArrayList<EventCustomerDto>();
+		HashMap<String, Object> response = new HashMap<String, Object>();
+		HashMap<String, Object> internalResponse = new HashMap<String, Object>();
+		try {
+
+			if (events.size() > 1) {
+				List<UserAccessLevelMapping> listOfCustomers = eventcustomerrepo.getUserAccessLevel();
+				for (int i = 0; i < events.size(); i++) {
+					for (int j = 0; j < listOfCustomers.size(); j++) {
+						AllEvent allevent = eventrepo.getEventById(events.get(i));
+						EventCustomerDto eventCustomerDto = new EventCustomerDto();
+						eventCustomerDto.setUserId(listOfCustomers.get(j).getAllUser().getUserId());
+						eventCustomerDto.setUserName(listOfCustomers.get(j).getAllUser().getFullName());
+						eventCustomerDto.setIsSelected("N");
+						eventCustomerDto.setActualPower(allevent.getActualPower());
+						eventCustomerDto.setParticipationStatus("1"); // hardcoded
+						eventCustomerDto.setCommitments(allevent.getCommitedPower());
+						eventCustomerDto.setPrice(allevent.getExpectedPrice());
+
+						listOfEventCustDto.add(eventCustomerDto);
+					}
+				}
+			} else {
+				AllEvent allevent = eventrepo.getEventById(events.get(0));
+				List<UserAccessLevelMapping> listOfCustomers = eventcustomerrepo
+						.getUserAccessLevel(allevent.getAllEventSet().getAllUser().getUserId());
+				List<EventCustomerMapping> listOfEventCustomers = eventcustomerrepo
+						.getEventCustomerMappings(events.get(0));
+				for (int j = 0; j < listOfCustomers.size(); j++) {
+					EventCustomerDto eventCustomerDto = new EventCustomerDto();
+					if (listOfEventCustomers.size() > 0) {
+
+						if (CompareHelper.compareData(listOfEventCustomers,
+								listOfCustomers.get(j).getAllUser().getUserId()) != null) {
+							EventCustomerMapping evtmap = CompareHelper.compareData(listOfEventCustomers,
+									listOfCustomers.get(j).getAllUser().getUserId());
+							eventCustomerDto.setIsSelected("Y");
 //        			} else {
 //        				eventCustomerDto.setIsSelected("N");
 //        			}
-        			
-					
-					eventCustomerDto.setUserId(listOfCustomers.get(j).getAllUser().getUserId());
-					eventCustomerDto.setUserName(listOfCustomers.get(j).getAllUser().getFullName());
-					eventCustomerDto.setActualPower(allevent.getActualPower());
-					if(evtmap.getEventCustomerStatusId() >= 3) {
-						eventCustomerDto.setParticipationStatus("1"); //hardcoded
-					} else {
-						eventCustomerDto.setParticipationStatus("0"); //hardcoded
-					}
-					if (evtmap.getCounterBidFlag() != null) {
-						eventCustomerDto.setCounterBidFlag(evtmap.getCounterBidFlag()); //hardcoded
-					} 
-					eventCustomerDto.setCouterBidAmount(evtmap.getCounterBidAmount()); //hardcoded
-					eventCustomerDto.setCommitments(evtmap.getCommitedPower());
-					eventCustomerDto.setPrice(evtmap.getBidPrice());
-					eventCustomerDto.setStatus(evtmap.getEventCustomerStatusId());
-					// eventCustomerDto.setEventId(event.getEventId());
-					listOfEventCustDto.add(eventCustomerDto);
-        			}
-			}	
-        	}
-        	}
-        
-		
-        internalResponse.put("customers",listOfEventCustDto);
-		response.put("responseStatus", "1");
-		response.put("responseMessage", "The request was successfully served.");
-		response.put("response", internalResponse);
-		response.put("customMessage", null);
 
-        	}
-        	
-        
-        
-        catch (Exception e) {
-            System.out.println("Error in checkExistence" + e.getMessage());
-            e.printStackTrace();
+							eventCustomerDto.setUserId(listOfCustomers.get(j).getAllUser().getUserId());
+							eventCustomerDto.setUserName(listOfCustomers.get(j).getAllUser().getFullName());
+							eventCustomerDto.setActualPower(allevent.getActualPower());
+							if (evtmap.getEventCustomerStatusId() >= 3) {
+								eventCustomerDto.setParticipationStatus("1"); // hardcoded
+							} else {
+								eventCustomerDto.setParticipationStatus("0"); // hardcoded
+							}
+							if (evtmap.getCounterBidFlag() != null) {
+								eventCustomerDto.setCounterBidFlag(evtmap.getCounterBidFlag()); // hardcoded
+							}
+							eventCustomerDto.setCouterBidAmount(evtmap.getCounterBidAmount()); // hardcoded
+							eventCustomerDto.setCommitments(evtmap.getCommitedPower());
+							eventCustomerDto.setPrice(evtmap.getBidPrice());
+							eventCustomerDto.setStatus(evtmap.getEventCustomerStatusId());
+							// eventCustomerDto.setEventId(event.getEventId());
+							listOfEventCustDto.add(eventCustomerDto);
+						}
+					}
+				}
+			}
+
+			internalResponse.put("customers", listOfEventCustDto);
+			response.put("responseStatus", "1");
+			response.put("responseMessage", "The request was successfully served.");
+			response.put("response", internalResponse);
+			response.put("customMessage", null);
+
+		}
+
+		catch (Exception e) {
+			System.out.println("Error in checkExistence" + e.getMessage());
+			e.printStackTrace();
 			response.put("responseStatus", "2");
 			response.put("responseMessage", "Internal Server Error.");
 			response.put("response", null);
 			response.put("customMessage", null);
 
-           
-        }
-        return response;
-    }
-	
-	public ArrayList<String> getPower(List<AllEventDto> listOfEvents) {
-		ArrayList<String> response= new ArrayList<String>();
-		double power=0; double price =0;
-		try {
-		for(int i=0;i<listOfEvents.size();i++) {
-			power = power + Double.parseDouble(listOfEvents.get(i).getPlannedPower());
-			price = price + Double.parseDouble(listOfEvents.get(i).getPrice());
 		}
-		response.add(Double.toString(power));
-		response.add(Double.toString(price));
-		} catch(Exception e) {
+		return response;
+	}
+
+	public ArrayList<String> getPower(List<AllEventDto> listOfEvents) {
+		ArrayList<String> response = new ArrayList<String>();
+		double power = 0;
+		double price = 0;
+		try {
+			for (int i = 0; i < listOfEvents.size(); i++) {
+				power = power + Double.parseDouble(listOfEvents.get(i).getPlannedPower());
+				price = price + Double.parseDouble(listOfEvents.get(i).getPrice());
+			}
+			response.add(Double.toString(power));
+			response.add(Double.toString(price));
+		} catch (Exception e) {
 			e.printStackTrace();
 		}
 		return response;
 	}
-	
-public HashMap<String,Object> rejectCustomer(int eventId, int customerId) {
-        
-    	HashMap<String,Object> response=new HashMap<String, Object>();
-    	
-        try {
-        EventCustomerMapping eventcustomermapping = eventcustomerrepo.getEventCustomerById(eventId,customerId);
-        eventcustomerrepo.updateEventCustomerbyId(6, eventId, customerId);
-        eventrepo.removeEventPower(eventcustomermapping.getCommitedPower(), eventId);
-        	response.put("responseStatus", "1");
-		response.put("responseMessage", "The request was successfully served.");
-		response.put("response", null);
-		response.put("customMessage", null);
 
-       }
-        
-        
-        catch (Exception e) {
-            System.out.println("Error in checkExistence" + e.getMessage());
-            e.printStackTrace();
+	public HashMap<String, Object> rejectCustomer(int eventId, int customerId) {
+
+		HashMap<String, Object> response = new HashMap<String, Object>();
+
+		try {
+			EventCustomerMapping eventcustomermapping = eventcustomerrepo.getEventCustomerById(eventId, customerId);
+			eventcustomerrepo.updateEventCustomerbyId(6, eventId, customerId);
+			eventrepo.removeEventPower(eventcustomermapping.getCommitedPower(), eventId);
+			response.put("responseStatus", "1");
+			response.put("responseMessage", "The request was successfully served.");
+			response.put("response", null);
+			response.put("customMessage", null);
+
+		}
+
+		catch (Exception e) {
+			System.out.println("Error in checkExistence" + e.getMessage());
+			e.printStackTrace();
 			response.put("responseStatus", "2");
 			response.put("responseMessage", "Internal Server Error.");
 			response.put("response", null);
 			response.put("customMessage", null);
 
-           
-        }
-        return response;
-    }
+		}
+		return response;
+	}
 
-public HashMap<String,Object> acceptCounterBid(int eventId, int customerId) {
-    
-	HashMap<String,Object> response=new HashMap<String, Object>();
-	
-    try {
-    EventCustomerMapping eventcustomermapping = eventcustomerrepo.getEventCustomerById(eventId,customerId);
-    eventcustomerrepo.acceptCounterBid("Y",5, eventId, customerId);
-    eventrepo.addEventPower(eventcustomermapping.getCommitedPower(), eventId);
-    	response.put("responseStatus", "1");
-	response.put("responseMessage", "The request was successfully served.");
-	response.put("response", null);
-	response.put("customMessage", null);
+	public HashMap<String, Object> acceptCounterBid(int eventId, int customerId) {
 
-   }
-    
-    
-    catch (Exception e) {
-        System.out.println("Error in checkExistence" + e.getMessage());
-        e.printStackTrace();
-		response.put("responseStatus", "2");
-		response.put("responseMessage", "Internal Server Error.");
-		response.put("response", null);
-		response.put("customMessage", null);
+		HashMap<String, Object> response = new HashMap<String, Object>();
 
-       
-    }
-    return response;
-}
+		try {
+			EventCustomerMapping eventcustomermapping = eventcustomerrepo.getEventCustomerById(eventId, customerId);
+			eventcustomerrepo.acceptCounterBid("Y", 5, eventId, customerId);
+			eventrepo.addEventPower(eventcustomermapping.getCommitedPower(), eventId);
+			response.put("responseStatus", "1");
+			response.put("responseMessage", "The request was successfully served.");
+			response.put("response", null);
+			response.put("customMessage", null);
+
+		}
+
+		catch (Exception e) {
+			System.out.println("Error in checkExistence" + e.getMessage());
+			e.printStackTrace();
+			response.put("responseStatus", "2");
+			response.put("responseMessage", "Internal Server Error.");
+			response.put("response", null);
+			response.put("customMessage", null);
+
+		}
+		return response;
+	}
 }
